@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020101227"
+#define public MagickPackageVersionAddendum ".020110109"
 #define public MagickPackageReleaseDate "unreleased"
