@@ -21,6 +21,27 @@
 </tr>
 </table>
 <p>
+2011-01-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/draw.c, wand/drawing_wand.c (MvgPrintf): Update to handle
+        C99 vsnprintf() return values.
+
+  <LI> magick/draw.c, wand/drawing_wand.c (DrawAnnotation): Linux
+        glibc does not pass extended text characters if "%.1024s"
+        formatting convention is used.  Apparently it assumes that such
+        characters may be UTF8 and returns -1 rather than outputting the
+        string, even if it is assured to fit.
+
+</UL>
+<p>
+2010-12-30 Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
+
+<UL>
+  <LI> coders/mat.c Matlab file level clarification.
+
+</UL>
+<p>
 2010-12-27 Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
 
 <UL>
